syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.elkd.core.server";

service ElkdService {
    rpc SayHello (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
